# tessproposaltool

./: .flake8  Makefile  README.md  pyproject.toml  target_list.csv
.github/workflows/: publish.yml
src/tessproposaltool/: __init__.py  tpt.py  tr.py
tests/: CreateProposalTargetList.ipynb  test_tpt.py
tests/data/: test1.csv  test5.csv  test_empty.csv  test_no_header.csv  test_nonsense_col.csv  test_optional_column.csv  test_radec_long.csv  test_radec_only.csv  test_tic_only.csv
tutorials/: CreateProposalTargetList.ipynb
