[tool.poetry]
name = "tessproposaltool"
version = "0.1.3"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "README.md"
packages = [{include = "tessproposaltool", from = "src"}]
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = ">=3.9 < 4.0.0"
rich = "^13.7.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
astropy = "^6.0.1"
astroquery = ">0.4.7"
asyncio = "^3.4.3"
tqdm = "^4.66.2"
lxml = "^5.2.1"
lksearch = ">= 1.1.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tpt = "tessproposaltool.tpt:tpt"